[package]
name = "passman"
version = "0.1.0"
edition = "2021"
description = "A secure local CLI password manager using AES-256-GCM encryption"

[[bin]]
name = "passman"
path = "src/main.rs"

[dependencies]
ring = "0.17"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
rpassword = "7.4"
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = 3
strip = true
